--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
+/* * {
+    border: 1px solid red;
+} */
+
+body {
+    height: 100vh;
+    margin: 0;
+    overflow: auto;
+    font-family: Roboto, sans-serif;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    justify-content: space-around;
+    background-color: rgb(231, 187, 74);
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 100px;
+}
+
 .grid-container {
     display: grid;
-    --grid-cols: 3;
-    --grid-rows: 3;
-    grid-gap: 1em;
-    grid-template-rows: repeat(var(--grid-rows), 50px);
-    grid-template-columns: repeat(var(--grid-cols), 50px);
-    justify-content: center;
-    align-content: center;
-    justify-items: center;
-    align-items: center;
-    height: 100vh;
+    grid-template-columns: repeat(var(minmax(100px, 1fr)));
+    grid-template-rows: repeat(var(minmax(100px, 1fr)));
+    width: 700px;
+    min-height: 700px;
+    margin: 0 auto 200px auto;
+    border: 3px solid #9c9fac;
   }
   
 .grid-item {
-    padding: 1em;
-    border: 1px solid #ddd;
-    text-align: center;
-  }
+    background-color: rgb(53, 51, 50);
+    border: 1px solid black;
+}
