--- a/style.css
+++ b/style.css
@@ -42,12 +42,12 @@ h1 {
     min-width: 700px;
     min-height: 700px;
     margin: 0 auto 200px auto;
-    border: 3px solid #9c9fac;
+    border: 2px solid #9c9fac;
 }
   
 .grid-item {
-    background-color: rgb(53, 51, 50);
-    border: 1px solid black;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid rgb(28, 28, 28);
 }
 
 .instructions {
